About me - updated contact form - fixed refresh after sending message and implemented error handling, updated health green bubble in my values, slight changes in intro, constant improvement on smaller resolutions

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,10 @@ textarea::placeholder {
   box-shadow:  0px 30px 60px 5px   rgba(255,255,255,0.55) inset,  -2px -36px 80px -10px  rgba(0,0,0,0.65) inset;
 }
 
+.custom-shadow-card3{
+  box-shadow:  0px 30px 35px 20px   rgba(255,255,255,0.55) inset,  -2px -36px 80px -10px  rgba(0,0,0,0.65) inset;
+}
+
 
 
 
